# solo6-19

./: .env.example  .gitignore  README.md  configforge.yaml  pyproject.toml
configforge/: builder.py  cli.py  config.py  crypto.py  deploy.py  env_subst.py  environment.py  git_integration.py  template.py  validator.py
environments/: dev.yaml  prod.yaml  staging.yaml
environments/deploy/: prod-server-1.yaml
templates/: appconfig.yaml  schema.json
