[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configforge"
version = "0.1.0"
description = "配置管理命令行工具 - 模板管理、环境变量替换、加密、多环境分发、Git集成、校验、一键部署"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "ConfigForge Team" }
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "jsonschema>=4.19.0",
    "GitPython>=3.1.0",
    "paramiko>=3.3.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
configforge = "configforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["configforge*"]
